[gd_scene load_steps=3 format=3 uid="uid://hg5of0j4eh26"]

[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="1_ai0ls"]
[ext_resource type="Script" path="res://scenes/levels/main_menu/sbross2.gd" id="1_u2vu6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -982.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2vu6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 128.0
offset_right = 920.0
offset_bottom = 944.0
color = Color(0.815686, 0.560784, 0.513726, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -425.0
offset_top = -359.0
offset_right = 543.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ai0ls")
theme_override_font_sizes/font_size = 47
text = "Внимание! 
Сброситься абсолютно всё.
Вы уверены?"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 448.0
offset_right = 832.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("1_ai0ls")
theme_override_font_sizes/font_size = 43
text = "Да, сбросить"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 640.0
offset_right = 840.0
offset_bottom = 768.0
theme_override_fonts/font = ExtResource("1_ai0ls")
theme_override_font_sizes/font_size = 43
text = "Нет, не хочу"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
